# Complex-Anagrams

./: README.md  pyproject.toml  requirements.txt
anagrams/: __init__.py  anagrams.py
coverage_html/: d_7e69d703925f717d___init___py.html  d_7e69d703925f717d_anagrams_py.html  d_a44f0ac069e85531_unit_test_py.html  index.html  status.json
tests/: unit_test.py
