[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "complex-anagrams"
version = "1.0.0"
authors = [
    { name = "Fedonyuk Anatoliy", email = "dekorstyle0@gmail.com" },
]
description = "This is a small program for creating Complex Anagrams from individual strings and entire text fragments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Anatoliy-Fedonyuk/Complex-Anagrams"
"Bug Tracker" = "https://github.com/Anatoliy-Fedonyuk/Complex-Anagrams/issues"